Fixed nav bar z-index

--- a/boltbulls/css/style.css
+++ b/boltbulls/css/style.css
@@ -627,7 +627,7 @@
     .nav {
         position: fixed;
         top: 0;
-        z-index: 100;
+        z-index: 9;
         width: 100%;
         display: inline-flex;
         height: 75px;
